Allow sources to choose an existing classifier from another source.
This commit just implements the source state logic, without adding/revising classifier usage semantics yet.

Includes changes to new/edit source forms, and handling cases like classifier deletion and labelset editing.

Also revise the source main page layout, mainly to try and group all the classifier related info together; might have more ideas for improvement later, but this should do for now.

Made a couple steps towards the issue about making date displays consistent; lib.utils date_display() and datetime_display() both go for localtime. But in the future we may want to detect the user's timezone or let them set it.

--- a/project/labels/templates/labels/labelset_add.html
+++ b/project/labels/templates/labels/labelset_add.html
@@ -57,7 +57,7 @@
 
   {% if has_classifier %}
     <div class="line">
-      This source has at least one automated classifier. Since the source's classifiers are tailored to the labelset, the classifiers and annotation suggestions for this source must be regenerated if you change the labelset. This may take a while to complete. As a very rough estimate, there is a base task that may take around 5 hours, followed by up to 2 seconds of processing per image.
+      This source has at least one automated classifier. Since the source's classifiers are tailored to the labelset, the classifiers and annotation suggestions for this source will be deleted and regenerated if you change the labelset.
     </div>
   {% endif %}
 
