--- a/project/vision_backend/templates/vision_backend/overview.html
+++ b/project/vision_backend/templates/vision_backend/overview.html
@@ -27,36 +27,13 @@ tr.source-row.needs_processing {
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td>Confirmed</td>
-      <td>{{ img_stats.confirmed }}</td>
-      <td>{{ img_stats.pct_confirmed }}</td>
-    </tr>
-    <tr>
-      <td>Unconfirmed</td>
-      <td>{{ img_stats.unconfirmed }}</td>
-      <td>{{ img_stats.pct_unconfirmed }}</td>
-    </tr>
-    <tr>
-      <td>Unclassified, with features</td>
-      <td>{{ img_stats.unclassified_with_features }}</td>
-      <td>{{ img_stats.pct_unclassified_with_features }}</td>
-    </tr>
-    <tr>
-      <td>Unclassified, without features</td>
-      <td>{{ img_stats.unclassified_without_features }}</td>
-      <td>{{ img_stats.pct_unclassified_without_features }}</td>
-    </tr>
-    <tr>
-      <td>Source has backend disabled</td>
-      <td>{{ img_stats.backend_disabled }}</td>
-      <td>{{ img_stats.pct_backend_disabled }}</td>
-    </tr>
-    <tr>
-      <td>All</td>
-      <td>{{ img_stats.total }}</td>
-      <td>100.0%</td>
-    </tr>
+    {% for row in image_stats %}
+      <tr>
+        {% for cell in row %}
+          <td>{{ cell }}</td>
+        {% endfor %}
+      </tr>
+    {% endfor %}
   </tbody>
 </table>
 
