Update calcification rate help-text.
Label-main and rate-export now share much of the same help text regarding calcification rates, instead of having some info in one place and some info in the other place.

--- a/project/calcification/templates/calcification/manage_tables.html
+++ b/project/calcification/templates/calcification/manage_tables.html
@@ -1,12 +1,10 @@
 {% include 'calcification/grid_of_tables.html' with global_calcification_tables=global_calcification_tables source_calcification_tables=source_calcification_tables %}
 
 {% if can_manage_source_data %}
-  <button id="new-rate-table-form-show-button">+ Upload a new table</button>
+  <div class="line">
+    <button id="new-rate-table-form-show-button">+ Upload a new table</button>
+  </div>
 {% endif %}
-
-<p>If a table does not define a rate for a particular label, CoralNet's computation assumes a rate of 0 for that label.</p>
-
-{% include 'calcification/help_rates.html' %}
 
 
 {# Modal dialog contents live in this hidden element until they're needed. #}
